syntax = "proto3";

// protoc --proto_path=protobuf/gloria --go_out=internal/gloria protobuf/gloria/gloria.proto

package gloria;
option go_package = "gloria";

// A GNSS Mark.
message Mark {
    // Code used to uniquely identify the GNSS Mark e.g. TAUP
    // teqc param: -O.mo
    string code = 1;
    // ITRF DOMES number e.g., 50217M001
    // teqc param: -O.mn
    string domes_number = 2;

    Point point = 3;

    repeated DeployedReceiver deployed_receiver = 4;
    repeated InstalledAntenna installed_antenna = 5;
    repeated InstalledRadome installed_radome = 6;

}

// A geographical point on NZGD2000
message Point {
    // Latitude - geographical latitude of the point for the given datum.
    // teqc param: -O.pg[1]
    double latitude = 1;
    // Longitude - geographical longitude of the point for the given datum.
    // teqc param: -O.pg[2]
    double longitude = 2;
    // Elevation - Height in meters of the point for the given datum.
    // teqc param: -O.pg[3]
    double elevation = 3;
}

// A time span that has a start and and end.
message Span {
    // Start - time in Unix seconds.
    int64 start = 1;
    // End - time in Unix seconds.  A future date of 9999-01-01T00:00:00Z is used to indicate still open.
    int64 end = 2;
}

// A GNSS receiver.
message Receiver {
    // The receiver model e.g., TRIMBLE NETR9
    // teqc param: -O.rt
    string model = 1;
    // The receiver serial number e.g., 5033K69574
    // teqc param: -O.rn
    string serial_number = 2;

    repeated Firmware firmware = 3;
}

// Firmware versions
message Firmware {
    // The firmware version e.g., 5.15
    // teqc param: -O.rv
    string version = 1;
    Span span = 2;
}

// A GNSS antenna
message Antenna {
    // The antenna model TRM57971.00
    // teqc param: -O.at[1]
    string model = 1;
    // The antenna serial number e.g., 1441031450
    // teqc param: -O.an
    string serial_number = 2;
}

// An antenna radome
message Radome {
    // The radome model
    // teqc param: -O.at[2]
    string model = 1;
}

// Offset for an installed antenna
message Offset {
    // The vertical offset in m e.g., 0.0550
    // teqc param: -O.pe[1]
    double vertical = 1;
    // The offset north in m e.g., 0.0
    // teqc param: -O.pe[2]
    double north = 2;
    // The offset east in m e.g., 0.0
    // teqc param: -O.pe[3]
    double east = 3;
}

message InstalledAntenna {
    Antenna antenna = 1;
    Offset offset = 2;
    Span span = 3;
}

message DeployedReceiver {
    Receiver receiver = 1;
    Span span = 2;
}

message InstalledRadome {
    Radome radome = 1;
    Span span = 2;
}